<resources>
    <string name="app_name">Time Keeper</string>
    <string name="repeat">REPEAT</string>
    <string name="repeat_show">M T W Th F</string>
    <string name="rington">RINGTON</string>
    <string name="rington_show">May Day - first day</string>
    <string name="music">MUSIC</string>
    <string name="textview">TextView</string>
    <string name="normal">Normal</string>
    <string name="ai_alarm">AI Alarm</string>
    <string name="counter">Counter</string>
    <string name="friends">FRIENDS</string>
    <string name="about">ABOUT US</string>
    <string name="QRcode_scanner">QR code Scanner</string>
    <string name="sign_up"><u>SIGN UP</u></string>
    <string name="sign_out">SIGN OUT</string>
    <string name="login"><u>LOGIN</u></string>
    <string name="edit">EDIT</string>
    <string name="ai_manage">AI MANAGE</string>
    <string name="forgot_pwd"><u>Forgot my password</u></string>
    <string name="pwd">PASSWORD :</string>
    <string name="gender">GENDER :</string>
    <string name="birthday">BIRTHDAY :</string>
    <string name="career">CAREER :</string>
    <string name="username">USERNAME :</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="monster">MONSTER</string>
    <string name="blood_left">瘋狂貪睡</string>
    <string name="blood_right">起床達人</string>
    <string name="forget_chatbox">Please do not forget your password again : )</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_up">SET UP</string>
    <string name="friend_req">Friend Request</string>
    <string name="friend_ser">Friend Search</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="clear">CLEAR</string>
    <string name="about_us">A B O U T</string>
    <string name="find_bug">請大家多多幫我們找bug，歡迎回報</string>
    <string name="address_warn">*若開啟颱風放假功能，請一定要填<b>「工作與住家縣市」</b></string>


    <string-array name="career">
        <item>Worker</item>
        <item>Student</item>
        <item>Homemaker</item>
        <item>Retirees</item>
        <item>Others</item>
    </string-array>

    <string-array name="address">
        <item>請選擇</item>
        <item>臺北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>臺中市</item>
        <item>臺南市</item>
        <item>高雄市</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>南投縣</item>
        <item>彰化縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>宜蘭縣</item>
        <item>花蓮縣</item>
        <item>臺東縣</item>
        <item>澎湖縣</item>
        <item>澎湖縣</item>
        <item>連江縣</item>
        <item>金門縣</item>

    </string-array>
</resources>
