<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    tools:context=".login">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginBottom="155dp"
        app:srcCompat="@drawable/ai_open" />

    <View
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginBottom="240dp"
        android:layout_marginLeft="3dp"
        android:background="@drawable/froget_chatbox" />

    <TextView
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="255dp"
        android:layout_marginLeft="6dp"
        android:text="@string/forget_chatbox"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="290dp"
        android:layout_height="310dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/login_background" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="310dp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EMAIL"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/user_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="USERNAME"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="60dp"
                android:background="@drawable/login_btn"
                android:fontFamily="@font/quicksand_bold"
                android:text="SEND"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/sign_up" />

                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/login" />
            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</FrameLayout>